k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-api
  namespace: iot-sims
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-api
  template:
    metadata:
      labels:
        app: manager-api
    spec:
      serviceAccountName: sim-manager-sa
      containers:
      - name: api
        image: ghcr.io/peqspc/manager-api:sha-b168c30
        imagePullPolicy: Always            
        ports:
        - containerPort: 80
